; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_pcap-regulator.c_pcap_regulator_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_pcap-regulator.c_pcap_regulator_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcap_regulator = type { i32, i32 }
%struct.regulator_dev = type { i32 }

@vreg_table = common dso_local global %struct.pcap_regulator* null, align 8
@NA = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @pcap_regulator_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcap_regulator_is_enabled(%struct.regulator_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca %struct.pcap_regulator*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  %7 = load %struct.pcap_regulator*, %struct.pcap_regulator** @vreg_table, align 8
  %8 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %9 = call i64 @rdev_get_id(%struct.regulator_dev* %8)
  %10 = getelementptr inbounds %struct.pcap_regulator, %struct.pcap_regulator* %7, i64 %9
  store %struct.pcap_regulator* %10, %struct.pcap_regulator** %4, align 8
  %11 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %12 = call i8* @rdev_get_drvdata(%struct.regulator_dev* %11)
  store i8* %12, i8** %5, align 8
  %13 = load %struct.pcap_regulator*, %struct.pcap_regulator** %4, align 8
  %14 = getelementptr inbounds %struct.pcap_regulator, %struct.pcap_regulator* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @NA, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %1
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %33

21:                                               ; preds = %1
  %22 = load i8*, i8** %5, align 8
  %23 = load %struct.pcap_regulator*, %struct.pcap_regulator** %4, align 8
  %24 = getelementptr inbounds %struct.pcap_regulator, %struct.pcap_regulator* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @ezx_pcap_read(i8* %22, i32 %25, i32* %6)
  %27 = load i32, i32* %6, align 4
  %28 = load %struct.pcap_regulator*, %struct.pcap_regulator** %4, align 8
  %29 = getelementptr inbounds %struct.pcap_regulator, %struct.pcap_regulator* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = ashr i32 %27, %30
  %32 = and i32 %31, 1
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %21, %18
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @rdev_get_id(%struct.regulator_dev*) #1

declare dso_local i8* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @ezx_pcap_read(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
